Add competition section and make it

--- a/index.html
+++ b/index.html
@@ -8,10 +8,11 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons+Outlined" rel="stylesheet">
     <link
         href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300;400;500;600;700&family=Syncopate:wght@400;700&display=swap"
         rel="stylesheet">
-    <link rel="stylesheet" href="style2.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
@@ -50,9 +51,67 @@
         <div>
             <!-- About section -->
         </div>
-        <div>
-            <!-- Competitions section -->
-        </div>
+        <section id="competitions" class="competition-section">
+
+  <h2 class="competition-title">COMPETITIONS</h2>
+
+  <div class="competition-container">
+
+    <!-- Startathon -->
+    <div class="competition-card">
+      <div class="competition-icon">
+        <span class="material-icons-outlined">rocket_launch</span>
+      </div>
+      <h3>Startathon</h3>
+      <p>
+        Pitch your unique startup idea and compete with bright innovators across the campus.
+        Showcase your business model, revenue plan, and execution strategy.
+      </p>
+      <ul class="competition-points">
+        <li>Team of 1–4 members</li>
+        <li>Pitch deck required</li>
+        <li>Judging based on feasibility + innovation</li>
+      </ul>
+    </div>
+
+    <!-- Case Study -->
+    <div class="competition-card">
+      <div class="competition-icon">
+        <span class="material-icons-outlined">analytics</span>
+      </div>
+      <h3>Case Study Competition</h3>
+      <p>
+        Tackle real industry-level business problems and propose strategic, actionable solutions.
+        Impress judges with data-driven insights and creativity.
+      </p>
+      <ul class="competition-points">
+        <li>Individual or teams of 2</li>
+        <li>Industry problem statements</li>
+        <li>Presentation round for finalists</li>
+      </ul>
+    </div>
+
+    <!-- Speaker Events -->
+    <div class="competition-card">
+      <div class="competition-icon">
+        <span class="material-icons-outlined">record_voice_over</span>
+      </div>
+      <h3>Speaker Events</h3>
+      <p>
+        Attend 2 power-packed speaker sessions featuring founders, CEOs,
+        and industry experts sharing transformative insights.
+      </p>
+      <ul class="competition-points">
+        <li>Open to all registered participants</li>
+        <li>Interactive Q&A sessions</li>
+        <li>Networking opportunities</li>
+      </ul>
+    </div>
+
+  </div>
+
+</section>
+
     </section>
 
     <section id="speakers">
