fixed central line

--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
                 <span class="label-text">IGDTUW PRESENTS</span>
             </div>
             <h1 class="hero-title">
-                <span class="title-line">LUMINA</span>
-                <span class="title-line-2">E-SUMMIT</span>
+                <span class="title-line">E-SUMMIT</span>
+                <span class="title-line-2">LUMINA-Illuminating Futures</span>
             </h1>
             <div class="hero-subtitle">
                 <span class="subtitle-text">Illuminate Your Entrepreneurial Journey</span>
