--- a/index.html
+++ b/index.html
@@ -7,10 +7,13 @@
     <title>LUMINA | E-Summit 2026</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300;400;500;600;700&family=Syncopate:wght@400;700&family=Orbitron:wght@400;500;600;700;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
+
+
 
 <body>
     <!-- Fixed Background with Grid and Rings -->
@@ -533,6 +536,7 @@
                     <li><a href="#" class="hover:text-pink-400 transition">Funding Ideas</a></li>
                 </ul>
             </div>
+            
 
             <div>
                 <h3 class="text-lg font-semibold mb-4">Follow Us</h3>
