--- a/index.html
+++ b/index.html
@@ -36,9 +36,8 @@
         <div class="hidden lg:flex">
             <a href="#about" class="nav-link">About</a>
             <a href="#competitions" class="nav-link">Competitions</a>
-            <a href="#speakers" class="nav-link">Luminary</a>
-            <a href="#schedule" class="nav-link">Timeline</a>
-            <a href="#sponsors" class="nav-link">Partners</a>
+            <a href="#speakers" class="nav-link">Speakers</a>
+            <a href="#sponsors" class="nav-link">Sponsors</a>
         </div>
     </nav>
 
@@ -47,7 +46,7 @@
         <div class="hero-content">
             <div class="hero-label">
                 <span class="label-dot"></span>
-                <span class="label-text">IGDTUW PRESENTS</span>
+                <span class="label-text">ECELL PRESENTS</span>
             </div>
             <h1 class="hero-title">
                 <span class="title-line">E-SUMMIT</span>
@@ -120,11 +119,11 @@
             <div class="about-header">
                 <span class="section-tag">
                     <span class="tag-line"></span>
-                    ABOUT LUMINA
+                    ABOUT ESUMMIT
                 </span>
                 <h2 class="section-title">Where Innovation <br/>Meets <span class="title-highlight">Inspiration</span></h2>
                 <p class="section-description">
-                    LUMINA E-Summit 2026 is the flagship entrepreneurship event of IGDTUW, bringing together 
+                    E-Summit 2026 by E-CELL is the flagship entrepreneurship event of IGDTUW, bringing together 
                     visionaries, innovators, and aspiring entrepreneurs for an immersive two-day experience 
                     that will redefine your entrepreneurial journey.
                 </p>
