--- a/index.html
+++ b/index.html
@@ -498,69 +498,52 @@
             </div>
         </section>
     </section>
+<!-- Footer -->
+<footer class="lumina-footer">
+  
+  <div class="footer-content">
 
-    <!-- Footer Section -->
-    <footer class="bg-gray-900 text-gray-500 py-12 relative">
-        <div class="max-w-7xl mx-auto px-6 md:px-12 grid grid-cols-1 md:grid-cols-4 gap-8">
-            <div>
-                <h3 class="text-lg font-semibold mb-4">Location</h3>
-                <div class="flex flex-col space-y-4">
-                    <div class="w-full h-40 rounded-lg overflow-hidden shadow-lg">
-                        <iframe
-                            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3503.3386164064586!2d77.229433!3d28.6655361!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x390cfd0683919c3b%3A0xf5fc331b74c2b9e2!2sIndira%20Gandhi%20Delhi%20Technical%20University%20for%20Women!5e0!3m2!1sen!2sin!4v1694000000000!5m2!1sen!2sin"
-                            width="100%" height="100%" style="border:0;" allowfullscreen="" loading="lazy"
-                            referrerpolicy="no-referrer-when-downgrade">
-                        </iframe>
-                    </div>
-                    <div>
-                        <p>Indira Gandhi Delhi Technical University For Women, Kashmere Gate, New Delhi, India</p>
-                    </div>
-                </div>
-            </div>
+    <!-- Brand -->
+    <div class="footer-brand">
+      <h3>E-SUMMIT <span>2026</span></h3>
+      <p>
+        LUMINA — Illuminating Futures.<br>
+        Flagship Entrepreneurship Summit of IGDTUW.
+      </p>
+    </div>
 
-            <div>
-                <h3 class="text-lg font-semibold mb-4">ECell IGDTUW</h3>
-                <ul class="space-y-2">
-                    <li><a href="#about" class="hover:text-pink-400 transition">About Us</a></li>
-                    <li><a href="updates.html" class="hover:text-pink-400 transition">Updates</a></li>
-                    <li><a href="blogs.html" class="hover:text-pink-400 transition">Blog</a></li>
-                    <li><a href="contact.html" class="hover:text-pink-400 transition">Contact</a></li>
-                </ul>
-            </div>
+    <!-- Links -->
+    <div class="footer-links">
+      <h4>Quick Links</h4>
+      <a href="#about">About</a>
+      <a href="#competitions">Competitions</a>
+      <a href="#speakers">Speakers</a>
+      <a href="#sponsors">Partners</a>
+    </div>
 
-            <div>
-                <h3 class="text-lg font-semibold mb-4">Services</h3>
-                <ul class="space-y-2">
-                    <li><a href="#" class="hover:text-pink-400 transition">Hackathons</a></li>
-                    <li><a href="#" class="hover:text-pink-400 transition">Insightful Sessions</a></li>
-                    <li><a href="#" class="hover:text-pink-400 transition">Events</a></li>
-                    <li><a href="#" class="hover:text-pink-400 transition">Funding Ideas</a></li>
-                </ul>
-            </div>
-            
+    <!-- Contact -->
+    <div class="footer-contact">
+      <h4>Connect</h4>
+      <p>IGDTUW, Kashmere Gate<br>New Delhi, India</p>
 
-            <div>
-                <h3 class="text-lg font-semibold mb-4">Follow Us</h3>
-                <div class="flex space-x-4 mb-4">
-                    <a href="#" class="hover:text-pink-400"><i class="fab fa-linkedin-in"></i></a>
-                    <a href="#" class="hover:text-pink-400"><i class="fab fa-facebook-f"></i></a>
-                    <a href="#" class="hover:text-pink-400"><i class="fab fa-instagram"></i></a>
-                    <a href="#" class="hover:text-pink-400"><i class="fab fa-x-twitter"></i></a>
-                </div>
-                <div class="mt-4">
-                    <a href="https://www.instagram.com/ecell.igdtuw/" class="hover:text-pink-400 transition">Instagram</a>
-                    <br><br>
-                    <p>+919810823235</p>
-                    <br>
-                    <p><span class="gmail com">Ecell.igdtu@gmail.com</span></p>
-                </div>
-            </div>
-        </div>
+      <div class="footer-socials">
+        <a href="#"><i class="fab fa-linkedin-in"></i></a>
+        <a href="#"><i class="fab fa-instagram"></i></a>
+        <a href="#"><i class="fab fa-x-twitter"></i></a>
+      </div>
+    </div>
 
-        <div class="mt-12 border-t border-gray-700 pt-6 text-center text-sm text-gray-500">
-            © 2025 ECell IGDTUW. All rights reserved.
-        </div>
-    </footer>
+  </div>
+
+  <!-- Bottom Bar -->
+  <div class="footer-bottom">
+    © 2026 E-Cell IGDTUW • All Rights Reserved
+  </div>
+
+  <!-- Scroll to top -->
+  <button id="scrollTopBtn" aria-label="Scroll to top">↑</button>
+
+</footer>
     <script type="module" src="script.js"></script>
 
 </body>
