--- a/index.html
+++ b/index.html
@@ -4,13 +4,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>LUMINA | E-Summit 2026</title>
+    <title>E-Summit 2026</title>
     <script src="https://cdn.tailwindcss.com"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300;400;500;600;700&family=Syncopate:wght@400;700&family=Orbitron:wght@400;500;600;700;900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="esummit.css">
 </head>
 
 
@@ -498,9 +500,10 @@
             </div>
         </section>
     </section>
-<!-- Footer -->
+    
+    <!-- Footer -->
 <footer class="lumina-footer">
-  
+
   <div class="footer-content">
 
     <!-- Brand -->
@@ -508,11 +511,12 @@
       <h3>E-SUMMIT <span>2026</span></h3>
       <p>
         LUMINA — Illuminating Futures.<br>
-        Flagship Entrepreneurship Summit of IGDTUW.
+        Flagship Entrepreneurship Summit<br>
+        of IGDTUW.
       </p>
     </div>
 
-    <!-- Links -->
+    <!-- Quick Links -->
     <div class="footer-links">
       <h4>Quick Links</h4>
       <a href="#about">About</a>
@@ -521,15 +525,24 @@
       <a href="#sponsors">Partners</a>
     </div>
 
-    <!-- Contact -->
+    <!-- Connect / CTA -->
     <div class="footer-contact">
-      <h4>Connect</h4>
-      <p>IGDTUW, Kashmere Gate<br>New Delhi, India</p>
+      <h4>Stay Connected</h4>
+      <p class="footer-muted">
+        Get updates about speakers,<br>
+        events & registrations.
+      </p>
 
       <div class="footer-socials">
-        <a href="#"><i class="fab fa-linkedin-in"></i></a>
-        <a href="#"><i class="fab fa-instagram"></i></a>
-        <a href="#"><i class="fab fa-x-twitter"></i></a>
+        <a href="https://www.instagram.com/ecell.igdtuw/" target="_blank" aria-label="Instagram">
+          <i class="fab fa-instagram"></i>
+        </a>
+        <a href="#" aria-label="LinkedIn">
+          <i class="fab fa-linkedin-in"></i>
+        </a>
+        <a href="#" aria-label="Twitter">
+          <i class="fab fa-x-twitter"></i>
+        </a>
       </div>
     </div>
 
@@ -540,11 +553,12 @@
     © 2026 E-Cell IGDTUW • All Rights Reserved
   </div>
 
-  <!-- Scroll to top -->
+  <!-- Scroll to Top -->
   <button id="scrollTopBtn" aria-label="Scroll to top">↑</button>
 
 </footer>
-    <script type="module" src="script.js"></script>
+
+    <script type="module" src="esummit.js"></script>
 
 </body>
 
